# linux_server

./: .pre-commit-config.yaml  CPPLINT.cfg  enable-lint.sh  readme.md
.hooks/: cpplint-pre-commit-hook.sh
05/: accept.cpp  byteorder.cpp  daytime.cpp  getaddrinfo.cpp  getnameinfo.cpp  listen.cpp  recv_buffer.cpp  recv_oob.cpp  reuse_addr.cpp  send_buffer.cpp  send_oob.cpp
06/: aaa.txt  cgi.cpp  sendfile.cpp  splice.cpp  tee.cpp  writev.cpp
07/: daemonize.cpp  euid.cpp  switch_user.cpp
09/: CMakeLists.txt  client_talker.cpp  epoll_ET_LT.cpp  multi_port.cpp  nonblock_connect.cpp  oneshot.cpp  select.cpp  server_talker.cpp
10/: sigurg.cpp  unievent.cpp
